# speech_contest_cpp

./: .gitignore  CMakeLists.txt  hello.cpp  main.cpp
create_lib/: CMakeLists.txt
create_lib/inc/: speaker.h
include/: speechManager.h
src/: speechManager.cpp
use_lib/: CMakeLists.txt  README.md
